optimize tmpl & bilinguistic translation

--- a/asset/search_result.html
+++ b/asset/search_result.html
@@ -13,11 +13,14 @@
     <style>
         body {
             font-family: 'system-ui', 'SuperPingFangV1', 'Microsoft YaHei UI', serif;
+            background: #FBF6EF;
+            font-size: 18px;
+            line-height: 1.4;
         }
     </style>
 </head>
 <body>
-<div style="margin: 0 150px">
+<div style="margin: 0 200px">
     <h1>
         {{ if .Keyword }}
         Search result for `{{ .Keyword }}`
